# yunibase

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  config.cmake  distrib.cmake  sources-current.cmake  wercker.yml
cmake/: YunibaseArtifactUpload.cmake  YunibaseBuildManager.cmake  YunibaseRecipe.cmake  YunibaseRecipeLogGen.cmake  YunibaseRecipeRunner.in.cmake  YunibaseRecipeRunnerLib.cmake  YunibaseSourceManager.cmake  YunibaseStampVersion.cmake  YunibaseStampVersionGen.cmake  YunibaseUpdateManager.cmake  YunibaseWorkaroundFileEdit.cmake  YunibaseWorkaroundFileTimestamp.cmake
hosts/cygwin/: CMakeLists.txt  host-Cygwin64.bat
hosts/docker-linux/: .gitignore  CMakeLists.txt  Dockerfile.testing  Dockerfile.testing-alpine  Dockerfile.testing-fedora  Dockerfile.yunibase  README.md  deploylocal.cmake  docker-build-archive.cmake  docker-run-build.cmake  update-tagfile.cmake
hosts/docker-linux/base-alpine/: Dockerfile
hosts/docker-linux/base-fedora/: Dockerfile
hosts/docker-linux/base-java/: Dockerfile
hosts/docker-linux/base-raspbian/: Dockerfile
hosts/docker-linux/base-ubuntu32LTS/: Dockerfile
hosts/docker-linux/base-ubuntuLTS/: Dockerfile
hosts/docker-linux/updater/: CMakeLists.txt
hosts/docker-windows/: Dockerfile.yunibuild-cygwin64
hosts/docker-windows/bootstrap/: Dockerfile
hosts/pkgsrc-osx/: MEMO
hosts/vagrant/: CMakeLists.txt  vagrant-fetch-sshconfig.cmake
hosts/vagrant/fbsd10-yunibase/: Vagrantfile
hosts/vagrant/fbsd10-yunibuild/: Vagrantfile
hosts/vagrant/fbsd11-yunibase/: Vagrantfile
hosts/vagrant/fbsd11-yunibuild/: Vagrantfile
hosts/vagrant/fedora-cloudbase/: Vagrantfile
hosts/windows/: CMakeLists.txt  bootstrap.cmake  cygwin-run-build.cmake  cygwin-run-yunitest.cmake  envsetup.bat  native-run-build.cmake  setup-msys-initialupdate.sh  setup-msys-installtoolchains.sh  setup-msys.cmake
hosts/windows/ewdk/: use-vs2013.bat
overrides/llvm-10/: clang++  llvm-config
overrides/llvm-13/: clang++  llvm-config
parts/: build-current.cmake  build-stable.cmake  distrib.cmake  implementations.cmake
patches/cyclone/: 0001-Build-Allow-bootstrap-directly.patch
patches/foment/: 0001-Ident-as-yunibase.patch
recipes/: bigloo.recipe.cmake  build-chicken-egg.cmake  build-larceny.cmake  chez.recipe.cmake  chibi-scheme.recipe.cmake  chicken.recipe.cmake  chicken5.recipe.cmake  cyclone.recipe.cmake  digamma.recipe.cmake  foment.recipe.cmake  gambit.recipe.cmake  gauche.recipe.cmake  guile.recipe.cmake  guile3.recipe.cmake  kawa.recipe.cmake  larceny.recipe.cmake  mit-scheme.recipe.cmake  mosh.recipe.cmake  nmosh.recipe.cmake  picrin.recipe.cmake  racket.recipe.cmake  rapid-gambit.recipe.cmake  s7yuni.recipe.cmake  sagittarius.recipe.cmake  scm.recipe.cmake  stklos.recipe.cmake  vicare.recipe.cmake
scripts/: ResetAndCleanup.cmake  bintray-upload.cmake  build-on-root.cmake  buildstep.cmake  deploy-archives.cmake  sagittarius-setup-helper-macos.cmake  update-tagfile.cmake
single/: CMakeLists.txt  README.md
